add and debug section_numbers
